--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -10,7 +10,7 @@
     <input class="instance-input" type="text" placeholder="Instance" value="{{composeFields.instance}}"></input>
     <input class="recipient-input" type="text" placeholder="Recipient" value="{{composeFields.recipient}}"></input>
     <textarea class="content-input" rows="6" placeholder="Type your message here">{{composeFields.content}}</textarea>
-    <div class="btn send">Send</div>
+    <button class="btn send">Send</button>
   </div>
 {{else}}
   <div class="single-bar">
