--- a/app/templates/FilterBar.hbs
+++ b/app/templates/FilterBar.hbs
@@ -36,6 +36,6 @@
     <input class="class-input" type="text" placeholder="Class" value="{{filters.class_key}}"></input>
     <input class="instance-input" type="text" placeholder="Instance" value="{{filters.instance_key}}"></input>
     <input class="recipient-input" type="text" placeholder="Recipient" value="{{filters.recipient}}"></input>
-    <div class="btn set-filters">Set Filters</div>
+    <button class="btn set-filters">Set Filters</button>
   </div>
 {{/if}}
