--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -53,7 +53,7 @@
       text-align: center;
       font-size: 40px;
       color: #BBB;
-      margin-top: 20%;
+      margin-top: 200px;
     }
 
     .filler-view {
@@ -69,7 +69,7 @@
     bottom: 0;
     margin: auto;
     height: 280px;
-    font-size: 40px;
+    font-size: 30px;
     color: #BBB;
   }
 }
