--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -132,6 +132,10 @@
         white-space: pre-line;
         font-size: 14px;
         font-family: $monospace-font;
+
+        a {
+          text-decoration: none;
+        }
       }
 
       .bottom-row {
