--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -18,6 +18,10 @@
       <td> Toggle top bar </td>
     </tr>
     <tr>
+      <td> Alt+s </td>
+      <td> Toggle subscription panel </td>
+    </tr>
+    <tr>
       <td> Alt+n </td>
       <td> Open new pane </td>
     </tr>
