--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -83,7 +83,9 @@
       text-transform: uppercase; }
   .navbar .user-info {
     display: inline;
-    float: right; }
+    float: right;
+    margin-right: 20px;
+    cursor: pointer; }
     .navbar .user-info .gravatar {
       height: 36px;
       margin-top: 7px;
@@ -93,14 +95,6 @@
       border-radius: 20px; }
     .navbar .user-info span {
       float: right; }
-    .navbar .user-info .username {
-      display: inline;
-      float: right;
-      color: #EEE;
-      text-decoration: none;
-      margin-right: 20px; }
-      .navbar .user-info .username:hover {
-        text-decoration: underline; }
   .navbar .personal-message, .navbar .add-pane, .navbar .toggle-keyboard, .navbar .toggle-panes {
     float: right;
     cursor: pointer;
@@ -503,6 +497,76 @@
       border: 1px solid white; }
     .modal .content td {
       border: 1px solid #BBB; }
+
+.subscription-panel {
+  transition: width 0.4s;
+  background: #EEE;
+  position: fixed;
+  z-index: 15;
+  top: 50px;
+  bottom: 0;
+  right: 0;
+  width: 0px;
+  box-shadow: 0px 1px 10px black; }
+  .subscription-panel.expanded {
+    width: 400px; }
+  .subscription-panel .header {
+    height: 30px;
+    line-height: 30px;
+    background-color: #555;
+    padding: 0px 10px 0px 10px;
+    color: white; }
+  .subscription-panel .sub-form {
+    padding: 5px;
+    margin-top: 5px; }
+    .subscription-panel .sub-form input {
+      width: 32.5%;
+      font-size: 16px;
+      padding: 3px 5px;
+      box-sizing: border-box;
+      border: 1px solid #BBB;
+      outline: none;
+      font-family: "Inconsolata"; }
+    .subscription-panel .sub-form .btn {
+      color: #eeeeee;
+      background-color: #3178d3;
+      border-color: transparent;
+      width: 100%;
+      margin-top: 10px; }
+      .subscription-panel .sub-form .btn:hover, .subscription-panel .sub-form .btn:focus, .subscription-panel .sub-form .btn:active, .subscription-panel .sub-form .btn.active {
+        color: #eeeeee;
+        background-color: #2765b5; }
+      .open .subscription-panel .sub-form .btn.dropdown-toggle {
+        color: #eeeeee;
+        background-color: #2765b5;
+        background-image: none; }
+      .subscription-panel .sub-form .btn.disabled, .subscription-panel .sub-form .btn.disabled:hover, .subscription-panel .sub-form .btn.disabled:focus, .subscription-panel .sub-form .btn.disabled:active, .subscription-panel .sub-form .btn.disabled.active, .subscription-panel .sub-form .btn[disabled], .subscription-panel .sub-form .btn[disabled]:hover, .subscription-panel .sub-form .btn[disabled]:focus, .subscription-panel .sub-form .btn[disabled]:active, .subscription-panel .sub-form .btn[disabled].active, fieldset[disabled] .subscription-panel .sub-form .btn, fieldset[disabled] .subscription-panel .sub-form .btn:hover, fieldset[disabled] .subscription-panel .sub-form .btn:focus, fieldset[disabled] .subscription-panel .sub-form .btn:active, fieldset[disabled] .subscription-panel .sub-form .btn.active {
+        background-color: #3178d3 !important; }
+  .subscription-panel .subs-label {
+    padding-left: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    margin-bottom: 5px; }
+  .subscription-panel .table-container {
+    height: 60%;
+    overflow-y: scroll;
+    border-top: 1px solid #BBB;
+    border-bottom: 1px solid #BBB; }
+    .subscription-panel .table-container .subs-table {
+      padding-left: 5px;
+      padding-right: 5px; }
+      .subscription-panel .table-container .subs-table .close-td {
+        font-size: 28px;
+        text-align: center;
+        cursor: pointer; }
+        .subscription-panel .table-container .subs-table .close-td:hover {
+          color: #ff3333; }
+      .subscription-panel .table-container .subs-table td {
+        width: 90px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        border-bottom: 1px solid #BBB; }
 
 html, body {
   width: 100%;
