--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -15,10 +15,10 @@
 {{else}}
   <div class="single-bar">
     <div class="compose">
-      <i class="fa fa-send"></i>&nbsp;&nbsp;Compose Message
+      <i class="fa fa-send"></i><span>&nbsp;&nbsp;Compose Message</span>
     </div>
     <div class="to-bottom">
-      <i class="fa fa-chevron-down"></i>&nbsp;&nbsp;Bottom
+      <i class="fa fa-chevron-down"></i><span>&nbsp;&nbsp;Bottom</span>
     </div>
   </div>
 {{/if}}
