--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -258,6 +258,10 @@
         border: 1px solid #BBB;
         width: 40px;
         height: 40px; }
+      .message-view .content .sender .not-verified {
+        text-transform: uppercase;
+        color: red;
+        font-size: 9px; }
     .message-view .content .message-block {
       display: table-cell;
       width: 100%; }
@@ -645,8 +649,6 @@ html, body {
 
   .compose-bar .single-bar, .compose-bar .top-bar {
     padding: 0px 10px 0px 10px; }
-  .compose-bar span {
-    display: none !important; }
 
   .no-panes {
     font-size: 16px !important; } }
