Mobile cleanup, hotkey modal cleanup, and moving panes around

--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -38,6 +38,10 @@
       <td> Move pane selection </td>
     </tr>
     <tr>
+      <td> Shift+Left/Right </td>
+      <td> Move selected pane </td>
+    </tr>
+    <tr>
       <td> &gt; </td>
       <td> Go to bottom </td>
     </tr>
