--- a/app/sass/_subscriptions.scss
+++ b/app/sass/_subscriptions.scss
@@ -75,11 +75,15 @@
     .subs-table {
       padding-left: 5px;
       padding-right: 5px;
+      width: 100%;
 
       .close-td {
         font-size: 28px;
         text-align: center;
         cursor: pointer;
+        min-width: 30px;
+        max-width: 30px;
+        width: 30px;
 
         &:hover {
           color: lighten(red, 10%);
@@ -95,11 +99,15 @@
       }
 
       td {
-        width: 90px;
+        min-width: 97px;
+        max-width: 97px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
         border-bottom: 1px solid #BBB;
+        box-sizing: border-box;
+        padding-left: 2px;
+        padding-right: 2px;
       }
     }
   }
