--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -65,11 +65,15 @@
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 120px;
     margin: auto;
-    height: 280px;
     font-size: 30px;
     color: #BBB;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    white-space: normal;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
   }
 }
