--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -195,12 +195,16 @@
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 120px;
     margin: auto;
-    height: 280px;
     font-size: 30px;
-    color: #BBB; }
+    color: #BBB;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    white-space: normal;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; }
 
 .message-view {
   width: 100%;
@@ -664,25 +668,27 @@ html, body {
   display: none !important; }
 
 @media only screen and (max-width: 500px) {
-  .navbar {
-    height: 0px !important; }
-    .navbar * {
-      display: none !important; }
+  .navbar .title {
+    display: none !important; }
+  .navbar .user-info {
+    display: none !important; }
 
   .mobile-login {
     display: inline-block !important; }
 
   .message-pane {
-    top: 0px !important; }
+    overflow-x: hidden; }
     .message-pane .message-view .signature {
       width: 200px !important; }
 
   .filter-bar .top-bar {
     padding: 0px 10px 0px 10px; }
-  .filter-bar span, .filter-bar .remove {
+  .filter-bar span {
     display: none !important; }
+  .filter-bar .remove {
+    margin-right: 13px !important; }
   .filter-bar .filters {
-    margin-right: 0px !important; }
+    margin-right: 25px !important; }
 
   .compose-bar .single-bar, .compose-bar .top-bar {
     padding: 0px 10px 0px 10px; }
