--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -121,6 +121,10 @@ html, body {
     .personal-message span {
       display: none;
     }
+
+    .help {
+      display: none !important;
+    }
   }
 
   .no-panes {
