--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -5,6 +5,9 @@
 
 {{#if username}}
   <div class="btn logout">Logout</div>
+  <div class="help">
+    <i class="fa fa-question-circle"></i>
+  </div>
   <div class="user-info">
       <span>{{username}}</span> <img class="gravatar" src="{{gravatar}}">
   </div>
