Shorten message height

--- a/app/sass/_theme.scss
+++ b/app/sass/_theme.scss
@@ -5,7 +5,8 @@ $navbar-height: 50px;
 $primary-btn-bg: rgb(49, 120, 211);
 $primary-btn-color: #EEE;
 
-$msg-header-height: 25px;
+$msg-header-height: 20px;
+$gravatar-size: 32px;
 
 $compose-filter-bar-height: 30px;
 
