--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -17,6 +17,7 @@
     line-height: $msg-header-height - 1px;
     background-color: #CCC;
     position: relative;
+    font-size: 14px;
 
     &:hover {
       .time.from-now {
@@ -116,8 +117,8 @@
 
       .gravatar {
         border: 1px solid #BBB;
-        width: 40px;
-        height: 40px;
+        width: $gravatar-size;
+        height: $gravatar-size;
       }
 
       .not-verified {
@@ -133,7 +134,7 @@
 
       .message {
         padding: 3px;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
         word-break: break-all;
         word-wrap: break-word;
         margin-top: 0px;
