--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -9,7 +9,7 @@
     <input class="class-input" type="text" placeholder="Class" value="{{composeFields.class}}"></input>
     <input class="instance-input" type="text" placeholder="Instance" value="{{composeFields.instance}}"></input>
     <input class="recipient-input" type="text" placeholder="Recipient" value="{{composeFields.recipient}}"></input>
-    <textarea class="content-input" rows="6" placeholder="Type your message here">{{composeFields.content}}</textarea>
+    <textarea class="content-input" rows="{{#if onMobile}}2{{else}}6{{/if}}" placeholder="Type your message here">{{composeFields.content}}</textarea>
     <button class="btn send">Send</button>
   </div>
 {{else}}
