Parse ztext formatting in messages and signatures.

--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -19,11 +19,11 @@
   </div>
   <div class="message-block">
     <pre class="message">
-      {{message}}
+      {{ztext message}}
     </pre>
     <div class="bottom-row">
       <div class="signature">
-        {{signature}}
+        {{ztext signature}}
       </div>
       <div class="controls">
         <i class="fa fa-quote-right quote"></i>
