--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -309,7 +309,8 @@
         word-break: break-all;
         word-wrap: break-word;
         margin-top: 0px;
-        white-space: pre-line;
+        white-space: pre-wrap;
+        text-indent: -42px;
         font-size: 14px;
         font-family: "Inconsolata"; }
         .message-view .content .message-block .message a {
