--- a/app/sass/_components.scss
+++ b/app/sass/_components.scss
@@ -72,3 +72,11 @@
     }
   }
 }
+
+@mixin user-select($value) {
+  -webkit-user-select: $value;
+  -moz-user-select: $value;
+  -ms-user-select: $value;
+  -o-user-select: $value;
+  user-select: $value;
+}
