--- a/app/sass/_hotkeyHelp.scss
+++ b/app/sass/_hotkeyHelp.scss
@@ -29,6 +29,7 @@ $overlay-z-index: 100;
     height: 30px;
     line-height: 12px;
     background-color: #333;
+    @include user-select(none);
 
     .title {
       padding: 10px;
