--- a/app/sass/_navbar.scss
+++ b/app/sass/_navbar.scss
@@ -8,6 +8,7 @@
   padding-right: 20px;
   z-index: 20;
   transition: height 0.2s ease-out;
+  @include user-select(none);
 
   &.hidden {
     height: 0px;
