--- a/app/sass/_subscriptions.scss
+++ b/app/sass/_subscriptions.scss
@@ -25,6 +25,7 @@
     background-color: #555;
     padding: 0px 10px 0px 10px;
     color: white;
+    @include user-select(none);
 
     .remove {
       float: right;
