--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -1,26 +1,46 @@
 <div class="header">
+  Signatures
+</div>
+<form class="zsig-form">
+  <textarea></textarea>
+  <button class="btn">Add signature</button>
+  <label>
+    Current Signatures
+  </label>
+  <div class="zsigs">
+    {{#each zsigs}}
+      <div class="zsig">
+        {{this}}
+        <div class="remove-zsig" data-zsig="{{this}}">
+          &times;
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</form>
+<div class="header">
   Manage Subscriptions
   <div class="remove">&times;</div>
 </div>
-<div class="sub-form">
+<form class="subs-form">
   <input class="class-input" type="text" placeholder="Class"></input>
   <input class="instance-input" type="text" placeholder="Instance" value="*"></input>
   <input class="recipient-input" type="text" placeholder="Recipient"></input>
   <br>
   <button class="btn subscribe">Subscribe</button>
-</div>
-<div class="subs-label">
-  Current Subscriptions
-</div>
-<div class="table-container">
-  <table cellspacing="0" class="subs-table">
-    {{#each models}}
-      <tr>
-        <td class="class-td" data-class="{{attributes.class}}">{{attributes.class}}</td>
-        <td>{{attributes.instance}}</td>
-        <td>{{attributes.recipient}}</td>
-        <td class="close-td" data-cid="{{cid}}">&times;</td>
-      </tr>
-    {{/each}}
-  </table>
-</div>
+  <label>
+    Current Subscriptions
+  </label>
+  <div class="subs-table-container">
+    <table cellspacing="0" class="subs-table">
+      {{#each subscriptions.models}}
+        <tr>
+          <td class="class-td" data-class="{{attributes.class}}">{{attributes.class}}</td>
+          <td>{{attributes.instance}}</td>
+          <td>{{attributes.recipient}}</td>
+          <td class="close-td" data-cid="{{cid}}">&times;</td>
+        </tr>
+      {{/each}}
+    </table>
+  </div>
+</form>
